--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.0",
+    "slugify": "^1.6.6",
     "twilio": "^5.4.2"
   },
   "devDependencies": {
