--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@srexi/purecounterjs": "^1.5.0",
     "axios": "^1.7.7",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.4.3",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "num-words": "^1.2.3",
@@ -27,9 +28,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-pdf": "^9.2.1",
     "react-player": "^2.16.0",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.29.0",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
