--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.0",
+    "express-fileupload": "^1.5.1",
     "firebase-admin": "^13.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
