--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,19 +13,22 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.1.1",
-    "@mui/material": "^6.4.0",
+    "@mui/material": "^6.4.4",
     "@mui/styled-engine-sc": "^6.1.1",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-three/fiber": "^8.17.14",
     "@srexi/purecounterjs": "^1.5.0",
     "axios": "^1.7.7",
     "firebase": "^11.2.0",
-    "framer-motion": "^12.4.3",
+    "framer-motion": "^12.4.4",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.475.0",
     "num-words": "^1.2.3",
     "number-to-words": "^1.2.4",
     "react": "^18.3.1",
+    "react-carousel3": "^1.0.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
@@ -34,10 +37,12 @@
     "react-router-dom": "^6.29.0",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.5",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.4",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
